changed versions, Java compatibility to 1.19.3